# pong_c

./: .gitignore  CMakeLists.txt  README.md  main.c  readme.txt
docs/: .gitignore
docs/Classical Mechanics+Solutions 2nd-Goldstein (lnw Adam)/: .gitignore
docs/Classical Mechanics-Goldstein,Poole,Safko (LaOmVi)/: .gitignore
include/: box.h  cmdInterpreter.h  cube.h  glfw_setup.h  inputprocess.h  mesh.h  model.h  object.h  plane.h  scene.h  sceneFactory.h  skybox.h  textureManager.h
include/assimp/: postprocess.h
shaders/: singlecolorshader.fs
src/: CMakeLists.txt  box.cpp  cmdInterpreter.cpp  cube.cpp  glad.c  glfw_setup.cpp  inputprocess.cpp  line.cpp  main.cpp  plane.cpp  sceneFactory.cpp  skybox.cpp  textureManager.cpp
src/camera/: CMakeLists.txt  camera.cpp
src/collisions/: CMakeLists.txt  collisionDetector.cpp
src/commands/: CMakeLists.txt  cmdInterpreter.cpp
src/include/: box.h  camera.h  collisionDetector.h  cube.h  frameHandler.h  glfw_setup.h  inputprocess.h  line.h  mesh.h  object.h  plane.h  scene.h  sceneFactory.h  skybox.h  textureManager.h
src/inputs/: CMakeLists.txt  inputprocess.cpp
src/objects/: CMakeLists.txt  box.cpp  cube.cpp  line.cpp  object.cpp  plane.cpp  skybox.cpp
src/scene/: CMakeLists.txt  frameHandler.cpp  scene.cpp  sceneFactory.cpp
src/setup/: CMakeLists.txt  glfw_setup.cpp
src/texture/: CMakeLists.txt  textureManager.cpp
